# mobile-roboter

./: .gitignore  aufgabe_2.launch
turtlebot_highlevel_controller/: CMakeLists.txt  CMakeLists_original.txt  README.md  package.xml
turtlebot_highlevel_controller/action/: ReachTarget.action
turtlebot_highlevel_controller/config/: config.rviz  config.yaml  default.yaml  overlying_params.yaml
turtlebot_highlevel_controller/include/turtlebot_highlevel_controller/: TurtlebotHighlevelClient.hpp  TurtlebotHighlevelController.hpp  TurtlebotHighlevelMovement.hpp  TurtlebotHighlevelProcessing.hpp  TurtlebotWallDetection.hpp  TurtlebotWallFollowing.hpp
turtlebot_highlevel_controller/launch/: own_in_stage.launch  turtlebot_highlevel_controller.launch  turtlebot_highlevel_controller_1a.launch  turtlebot_highlevel_controller_1b.launch  turtlebot_highlevel_controller_overlying_params.launch  turtlebot_highlevel_controller_rosbag.launch  turtlebot_in_stage_htwg_2.launch
turtlebot_highlevel_controller/maps/: apartment.world  apartment.yaml  gmapping_map.yaml  gmapping_map_rosbag.yaml  piller.world  piller.yaml
turtlebot_highlevel_controller/msg/: ActionMessage.msg  TransportMessage.msg
turtlebot_highlevel_controller/src/: TurtlebotHighlevelClient.cpp  TurtlebotHighlevelController.cpp  TurtlebotHighlevelMovement.cpp  TurtlebotHighlevelProcessing.cpp  TurtlebotWallDetection.cpp  TurtlebotWallFollowing.cpp  turtlebot_highlevel_client_node.cpp  turtlebot_highlevel_controller_node.cpp  turtlebot_highlevel_movement_node.cpp  turtlebot_highlevel_processing_node.cpp  turtlebot_wall_detection_node.cpp  turtlebot_wall_following_node.cpp
turtlebot_highlevel_movement/: CMakeLists.txt  package.xml
turtlebot_highlevel_movement/config/: default.yaml
turtlebot_highlevel_movement/include/turtlebot_highlevel_movement/: TurtlebotHighlevelMovement.hpp
turtlebot_highlevel_movement/launch/: turtlebot_in_stage_htwg_2.launch
turtlebot_highlevel_movement/src/: TurtlebotHighlevelMovement.cpp  turtlebot_highlevel_movement_node.cpp
turtlebot_highlevel_processing/: CMakeLists.txt  package.xml
turtlebot_highlevel_processing/include/turtlebot_highlevel_processing/: TurtlebotHighlevelProcessing.hpp
turtlebot_highlevel_processing/launch/: turtlebot_highlevel_processing_overlying_params.launch
turtlebot_highlevel_processing/src/: TurtlebotHighlevelProcessing.cpp  turtlebot_highlevel_processing_node.cpp
