<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_highlevel_controller</name>
  <version>0.0.0</version>
  <description>The turtlebot_highlevel_controller package</description>

  <maintainer email="hendrik.aufderstroth@htwg-konstanz.de">Hendrik Aufderstroth</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/turtlebot_highlevel_controller</url> -->
  <author email="hendrik.aufderstroth@htwg-konstanz.de">Hendrik Aufderstroth</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <!-- <build_export_depend>roscpp</build_export_depend> -->
  <!-- <build_export_depend>sensor_msgs</build_export_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
